docs: add comprehensive README with architecture, features, and setup instructions